# aiida-ase

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.json  setup.py
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
aiida_ase/: __init__.py
aiida_ase/calculations/: ase.py
aiida_ase/parsers/: ase.py
aiida_ase/workflows/: base.py
docs/source/: conf.py  index.rst
docs/source/module_guide/: calculations.rst  index.rst  parsers.rst
docs/source/user_guide/: ase.rst  index.rst  test_gpaw_1.py  test_gpaw_2.py  test_gpaw_parallel.py
examples/: example_pw_gpaw_relax.py  example_pw_gpaw_scf.py  test_gpaw.py  test_gpaw_compact1.py  test_gpaw_compact1_parallel.py
examples/calculations/: example_grid_gpaw_relax.py  example_inq.py  example_inq_relax.py  example_pw_gpaw_relax.py  example_pw_gpaw_scf.py
examples/workflows/: example_base_gpaw.py
src/aiida_ase/: __init__.py
src/aiida_ase/calculations/: ase.py
src/aiida_ase/parsers/: ase.py  gpaw.py
src/aiida_ase/workflows/: base.py
tests/: conftest.py
tests/calculations/: test_ase.py
tests/calculations/test_ase/: test_ase_default.in  test_ase_default.traj  test_default.in  test_gpw_file.in
tests/examples/: test_gpaw_1.py  test_gpaw_2.py  test_gpaw_compact2.py  test_gpaw_fd.py  test_gpaw_pw.py  test_gpaw_pw_simple.py
tests/parsers/: test_ase.py
tests/parsers/fixtures/ase/default_gpaw/: aiida.out  aiida_atoms.json  aiida_out_atoms.json  results.json
tests/parsers/test_ase/: test_default_gpaw.yml
