[metadata]
author = The AiiDA team
name = aiida-ase
version = 2.0.0a1
description = The official AiiDA plugin for ASE
long_description = file: README.md
license = MIT License
url = https://github.com/aiidaplugins/aiida-ase
classifiers =
    Development Status :: 4 - Beta
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires >= 3.7,
install_requires =
    aiida-core[atomic_tools]~=1.0

[options.extras_require]
docs =
    sphinx
    sphinx-autoapi
    sphinx-book-theme
    sphinx-click
    sphinx-copybutton
pre-commit =
    pre-commit
    pylint
    pytest
tests =
    pgtest
    pytest
    pytest-regressions

[options.entry_points]
aiida.calculations =
    ase.ase = aiida_ase.calculations.ase:AseCalculation
aiida.parsers =
    ase.ase = aiida_ase.parsers.ase:AseParser
